modify links to article.html & picture style

--- a/front/index/index.html
+++ b/front/index/index.html
@@ -27,7 +27,7 @@
             </div>
             <div id="username">WWWWWWWWWWWWWWWWWWWWWWWWWW</div>
           </div>
-          <div id="title">龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜</div>
+          <div id="title" data-id="1">龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜</div>
           <div id="preview">龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜...</div>
         </div>
         <div id="picture" data-id="1">
