--- a/front/article/article.html
+++ b/front/article/article.html
@@ -1,24 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="../public/images/logo.svg" />
   <link rel="stylesheet" href="../global.css">
   <link rel="stylesheet" href="../public/fonts/fonts.css">
   <link rel="stylesheet" href="article.css">
   <title>Articles Web</title>
 </head>
-<body>
+
+<body class="theme">
   <header>
+    <div id="nav-left">
+      <div id="home">
+        <img src="../public/images/logo.png">
+      </div>
+    </div>
+    <div id="nav-right">
+      <div id="dark-mode">
+        <i class="fa-solid fa-sun theme"></i>
+      </div>
+      <div id="profile">
+        <i class="fa-solid fa-circle-user"></i>
+      </div>
+    </div>
   </header>
   <main>
     <div id="container">
+      <div id="article">
+        <h1 id="title"></h1>
+        <div id="info">
+          <div id="avatar">
+            <img src="">
+          </div>
+          <div id="username"></div>
+        </div>
+        <div id="picture">
+          <img src="">
+        </div>
+        <div id="content"></div>
+      </div>
     </div>
   </main>
   <footer>MIT licensed | Copyright &copy; 2024</footer>
   <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="../utils.js"></script>
+  <script src="../global.js"></script>
   <script src="article.js"></script>
 </body>
+
 </html>
