--- a/front/article/article.html
+++ b/front/article/article.html
@@ -22,9 +22,17 @@
       <div id="dark-mode">
         <i class="fa-solid fa-sun theme"></i>
       </div>
-      <div id="profile">
-        <i class="fa-solid fa-circle-user"></i>
+      <div id="sign">
+        <div id="sign-in">
+          Sign In
+        </div>
+        <div id="sign-up">
+          Sign Up
+        </div>
       </div>
+      <!-- <div id="profile">
+        <i class="fa-solid fa-circle-user"></i>
+      </div> -->
     </div>
   </header>
   <main>
