v1 set up & modal click event

--- a/front/index/index.html
+++ b/front/index/index.html
@@ -29,72 +29,24 @@
         <div id="sign-up">
           Sign Up
         </div>
-      </div>
-      <div id="profile">
-        <i class="fa-solid fa-circle-user"></i>
+        <!-- <div id="profile">
+          <i class="fa-solid fa-circle-user"></i>
+        </div> -->
       </div>
     </div>
   </header>
   <main>
     <div id="container">
       <!-- 渲染文章列表 -->
-      <!-- <div id="article">
-        <div id="main">
-          <div id="info">
-            <div id="avatar">
-              <img src="../public/images/testPic.png">
-            </div>
-            <div id="username">WWWWWWWWWWWWWWWWWWWWWWWWWW</div>
-          </div>
-          <div id="title" data-id="1">龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜</div>
-          <div id="preview">龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜龜...</div>
-        </div>
-        <div id="picture" data-id="1">
-          <img src="../public/images/testPic.png">
-        </div>
-      </div> -->
     </div>
   </main>
   <footer>MIT licensed | Copyright &copy; 2024</footer>
-  <!-- <div id="modal-bg">
-    <table id="modal">
-      <tbody>
-        <tr>
-          <td colspan="3">
-            <h1 id="modal-name">註冊</h1>
-          </td>
-        </tr>
-        <tr>
-          <td><label for="username">帳號</label></td>
-          <td>：</td>
-          <td><input id="username" name="username"></input></td>
-        </tr>
-        <tr>
-          <td><label for="email">信箱</label></td>
-          <td>：</td>
-          <td><input id="email" name="email"></input></td>
-        </tr>
-        <tr>
-          <td><label for="password">密碼</label></td>
-          <td>：</td>
-          <td><input id="password" name="password"></input></td>
-        </tr>
-        <tr>
-          <td><label for="re-password">確認密碼</label></td>
-          <td>：</td>
-          <td><input id="re-password" name="re-password"></input></td>
-        </tr>
-        <tr>
-          <td colspan="3"><button id="submit">提交</button></td>
-        </tr>
-      </tbody>
-    </table>
-  </div> -->
   <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="../global.js"></script>
   <script src="../utils.js"></script>
   <script src="index.js"></script>
+  <!-- 渲染 modal -->
 </body>
 
 </html>
